<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activies.HomeActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="187dp"
        android:layout_height="126dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="TODO"
        android:src="@drawable/icon_app"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline27"
        app:layout_constraintVertical_bias="0.875" />


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/passageiros"
        android:layout_width="75dp"
        android:layout_height="95dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        android:onClick="passageiro"
        android:src="@drawable/daughter"
        app:civ_border_color="@color/AzulTema"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toStartOf="@+id/escolas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/passageiros"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passageiros"
        app:layout_constraintStart_toStartOf="@+id/passageiros"
        app:layout_constraintTop_toBottomOf="@+id/passageiros"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/escolas"
        android:layout_width="75dp"
        android:layout_height="95dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:onClick="escola"
        android:src="@drawable/scholarship"
        app:civ_border_color="@color/AzulTema"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toStartOf="@+id/itinerario"
        app:layout_constraintStart_toEndOf="@+id/passageiros"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="84dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:text="@string/escolas"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/escolas"
        app:layout_constraintStart_toStartOf="@+id/escolas"
        app:layout_constraintTop_toBottomOf="@+id/escolas"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/itinerario"
        android:layout_width="75dp"
        android:layout_height="95dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:onClick="itinerario"
        android:src="@drawable/book"
        app:civ_border_color="@color/AzulTema"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/escolas"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/itinerario"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/itinerario"
        app:layout_constraintStart_toStartOf="@+id/itinerario"
        app:layout_constraintTop_toBottomOf="@+id/itinerario"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/user"
        android:layout_width="75dp"
        android:layout_height="95dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        android:onClick="usuario"
        android:src="@drawable/usersnew"
        app:civ_border_color="@color/AzulTema"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toStartOf="@+id/pais"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="73dp"
        android:layout_height="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/usu_rio"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/user"
        app:layout_constraintStart_toStartOf="@+id/user"
        app:layout_constraintTop_toBottomOf="@+id/user"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pais"
        android:layout_width="75dp"
        android:layout_height="95dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:onClick="pais"
        android:src="@drawable/family"
        app:civ_border_color="@color/AzulTema"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toStartOf="@+id/map"
        app:layout_constraintStart_toEndOf="@+id/user"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/pais"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pais"
        app:layout_constraintStart_toStartOf="@+id/pais"
        app:layout_constraintTop_toBottomOf="@+id/pais"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:layout_width="75dp"
        android:layout_height="95dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        app:civ_border_color="@color/AzulTema"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pais"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="66dp"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="456dp" />


    <ImageView
        android:layout_width="43dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="logout"
        android:src="@drawable/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="240dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="54dp" />


</androidx.constraintlayout.widget.ConstraintLayout>